--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Naamloos document</title>
+<title>DENF COFFEE ROASTERS</title>
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
-	<header> 
-	  <h1 class="my-class"> DENF COFFEE ROASTERS </h1>
-</header>
-
+	
+	<body>
+		<header> 
+	  		<h1 class="my-class">DENF COFFEE ROASTERS</h1>
+		</header>
+	
 	<main>
 		<h2> an Eindhoven based coffee bar </h2>
 
@@ -26,7 +28,7 @@
       			<p>I study at BUas. 
       			Click <a href="https://www.buas.nl/">here</a> to go to their website</p>
       		</section>
-</main>
-<body>
+	</main>
+
 </body>
 </html>
